hero section complete

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
     <section class="d-flex">
         
             <div class=" hero-section-first-div" >
-                <h1>Be the Penguins</h1>
+                <h1 id="yellow-color">Be the Penguins</h1>
                 <h1>of Winter</h1>
-                <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Odit numquam similique, dolore voluptas veritatis nulla?</p>
                 <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
             </div>
