--- a/index.html
+++ b/index.html
@@ -67,39 +67,104 @@
         <div class="product-cat-title ">
             <h3>WOMAN JACKET</h3>
         </div>
-        <!--  -->
-        <div class="jacket text-center">
-            <div class="card-deck">
+        <!-- card start -->
+        <div class="jacket ">
+            <div class="card-deck d-flex ">
                 <div class="card">
-                    <img src="images/SeekPng 1.png" class="card-img-top" alt="first jacket">
+                    <div class="card-image">
+                        <img src="images/SeekPng 1.png" class="card-img-top" alt="first jacket">
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">Yellow Coat Jacket</h5>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <h5>$234</h5>
+                        <div class="card-last d-flex justify-content">
+                            <h5>$234</h5>
                         <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/PngItem_2597366 1.png" class="card-img-top" alt="...">
+                    <div class="card-image">
+                        <img src="images/PngItem_2597366 1.png" class="card-img-top" alt="Ladies Jacket">
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">Ladies Jacket</h5>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <h5>$234</h5>
+                        <div class="card-last d-flex">
+                            <h5>$234</h5>
                         <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+                    <div class="card-image">
+                        <img src="images/image 15.png" class="card-img-top" alt="Woman Leather Jacket">
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Samsung Galaxy Note9</h5>
+                        <h5 class="card-title">Woman Leather Jacket</h5>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <h5>$699</h5>
+                        <div class="card-last d-flex">
+                            <h5>$234</h5>
                         <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+                        </div>
                     </div>
                 </div>
             </div>
+        <!-- card end -->
    </section>
    <!-- woman jacket end -->
+    <!-- man jacket start -->
+    <section class="man-jacket">
+        <div class="container">
+            <div class="product-cat-title ">
+                <h3>MAN JACKET</h3>
+            </div>
+            <!-- card start -->
+            <div class="jacket ">
+                <div class="card-deck d-flex ">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="images/image 11.png" class="card-img-top" alt="Snowboard Jacket Mens">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Snowboard Jacket Mens</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                            <div class="card-last d-flex">
+                                <h5>$234</h5>
+                            <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="images/vippng 1.png" class="card-img-top" alt="Man Leather Jackets">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Man Leather Jackets</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                            <div class="card-last d-flex">
+                                <h5>$234</h5>
+                            <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="images/toppng 1.png" class="card-img-top" alt="Man Casual Jackets">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Man Casual Jackets</h5>
+                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                            <div class="card-last d-flex">
+                                <h5>$234</h5>
+                            <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <!-- card end -->
+       </section>
+       <!-- man jacket end -->
 
 </body>
 </html>
