--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Yellow Coat Jacket</h5>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <div class="card-last d-flex justify-content">
+                        <div class="card-last d-flex justify-content-between align-items-center">
                             <h5>$234</h5>
                         <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
                         </div>
@@ -90,7 +90,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Ladies Jacket</h5>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <div class="card-last d-flex">
+                        <div class="card-last d-flex justify-content-between align-items-center">
                             <h5>$234</h5>
                         <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
                         </div>
@@ -103,7 +103,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Woman Leather Jacket</h5>
                         <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <div class="card-last d-flex">
+                        <div class="card-last d-flex justify-content-between align-items-center">
                             <h5>$234</h5>
                         <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
                         </div>
@@ -129,7 +129,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Snowboard Jacket Mens</h5>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                            <div class="card-last d-flex">
+                            <div class="card-last d-flex justify-content-between align-items-center">
                                 <h5>$234</h5>
                             <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
                             </div>
@@ -142,7 +142,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Man Leather Jackets</h5>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                            <div class="card-last d-flex">
+                            <div class="card-last d-flex justify-content-between align-items-center">
                                 <h5>$234</h5>
                             <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
                             </div>
@@ -155,7 +155,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Man Casual Jackets</h5>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                            <div class="card-last d-flex">
+                            <div class="card-last d-flex justify-content-between align-items-center">
                                 <h5>$234</h5>
                             <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
                             </div>
