--- a/index.html
+++ b/index.html
@@ -165,6 +165,129 @@
             <!-- card end -->
        </section>
        <!-- man jacket end -->
+       <!-- 4th section start -->
+       <section class="forth-section">
+           <div class="container">
+             <div class="row ">
+               <div class="col-md-5 ">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="images/image 12.png" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Find the Perfect Fit</h5>
+                          <p class="card-text">Everybody is different, which is why we <br>offer styles for every body</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="images/image 13.png" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Free Exchanges</h5>
+                          <p class="card-text">One of the many reasons you can shop<br>with peace of mind</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="images/image 14.png" alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title">Contact Our Seller</h5>
+                          <p class="card-text">They are here to help you. That's quite<br> literally what we pay them for</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+             </div>
+               <div class=" faria col-md-7  ">
+                   <img class="img-fluid" src="images/XMLID 1.png" alt="">
+               </div>
+             </div>
+           </div>
+       </section>
+       <!-- 4th section end -->
+
+       <!-- extra work start -->
+       <section class="newsletter ">
+        <div class="container  shadow bg-success text-white  p-4 p-md-5 rounded ">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-md-6">
+                    <h2>GRAB YOUR COUPON</h2>
+                    <p>Join us now to get all news and special coupons</p>
+                </div>
+                <div class="col-md-6">
+                    <form class="form" action="">
+                        <div class="input-group">
+                            <input class="form-control" placeholder="Enter Your Email Here" type="text">
+                            <div class="input-group-append">
+                                <button class="btn btn-danger">Join Us</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="bg-light mt-5">
+        <div class="container pt-5 pb-5">
+            <div class="row">
+                <div class="col-md-4 order-4 order-md-0">
+                    <img style="width: 400px; height: 90px;" class="d-none d-md-block" src="logo.png" alt="">
+                    <p class="mt-3 text-center text-md-left">Penguin Fashion © 2021 . All right Reserved</p>
+                </div>
+                <div class="col-6 col-md-2">
+                    <ul class="list-unstyled">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md-3">
+                    <ul class="list-unstyled">
+                        <li><a href="#">Our Feed</a></li>
+                        <li><a href="#">Term And Condition</a></li>
+                        <li><a href="#">Our Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 text-center text-md-left">
+                    <h5>Stay Connected</h5>
+                    <ul class="list-unstyled contact-info">
+                        <li><img src="images/icons/email.png" alt=""><a href="mailto:info@hotgadget.com"> info@hotgadget.com</a></li>
+                        <li><img src="images/icons/call.png" alt=""><a href="tel:88017-XXX-XXX">+88017-XXX-XXX</a></li>
+                    </ul>
+                    <ul class="list-inline social-media">
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://facebook.com/dev.shadin"><img src="images/icons/facebook.png" alt=""></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://twitter.com/hotgadget"><img src="images/icons/twitter.png" alt=""></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://instagram.com/hotgadget"><img src="images/icons/instagram.png" alt=""></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a target="_blank" href="https://pinterest.com/hotgadget"><img src="images/icons/pinterest.png" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+       <!-- extra work end -->
 
 </body>
 </html>
