--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                 <div class="col-md-3 text-center text-md-left">
                     <h5>Stay Connected</h5>
                     <ul class="list-unstyled contact-info">
-                        <li><img src="images/icons/email.png" alt=""><a href="mailto:info@hotgadget.com"> info@hotgadget.com</a></li>
-                        <li><img src="images/icons/call.png" alt=""><a href="tel:88017-XXX-XXX">+88017-XXX-XXX</a></li>
+                        <li><img src="images/icons/email.png" alt=""><a href="mailto:info@hotgadget.com"> info@penguinfashion.com</a></li>
+                        <li><img src="images/icons/call.png" alt=""><a href="tel:88017-XXX-XXX">+88012-XXX-XXX</a></li>
                     </ul>
                     <ul class="list-inline social-media">
                         <li class="list-inline-item">
