--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
      <!-- link bootstrap end -->
+
+     <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+     <link rel=”stylesheet” href=”css/bootstrap.css”>
+     <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
 </head>
 <body>
    <header class="header">
@@ -53,118 +57,106 @@
                 <h1 id="yellow-color">Be the Penguins</h1>
                 <h1>of Winter</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Odit numquam similique, dolore voluptas veritatis nulla?</p>
-                <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+                <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
             </div>
             <div class="hero-section-second-div" >
                 <img class="w-100" src="images/profile.png" alt="">
             </div>       
     </section>
     <!-- hero section end -->
-   </header>
-   <!-- woman jacket start -->
-   <section class="woman-jacket">
-    <div class="container">
-        <div class="product-cat-title ">
-            <h3>WOMAN JACKET</h3>
-        </div>
-        <!-- card start -->
-        <div class="jacket ">
-            <div class="card-deck d-flex ">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/SeekPng 1.png" class="card-img-top" alt="first jacket">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Yellow Coat Jacket</h5>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <div class="card-last d-flex justify-content-between align-items-center">
-                            <h5>$234</h5>
-                        <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
-                        </div>
-                    </div>
+    <!-- woman jacket section start -->
+    <section style="margin-top: 30%; margin-bottom: 10%;" class="container">
+        <h1>WOMAN JACKET</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4 ">
+            <div class="col">
+              <div class="card h-70 shadow border-0">
+                <img style="height: 30%;width: 90%;position: relative;left: 5%;" src="images/SeekPng 1.png" class="card-img-top mt-2 card-image" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Yellow Coat Jacket</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
                 </div>
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/PngItem_2597366 1.png" class="card-img-top" alt="Ladies Jacket">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Ladies Jacket</h5>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <div class="card-last d-flex justify-content-between align-items-center">
-                            <h5>$234</h5>
-                        <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/image 15.png" class="card-img-top" alt="Woman Leather Jacket">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Woman Leather Jacket</h5>
-                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                        <div class="card-last d-flex justify-content-between align-items-center">
-                            <h5>$234</h5>
-                        <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
-                        </div>
-                    </div>
-                </div>
+                <div class="card-last d-flex justify-content-between align-items-center m-2">
+                  <h5 class="number-234">$234</h5>
+              <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+              </div>
+              </div>
             </div>
-        <!-- card end -->
-   </section>
-   <!-- woman jacket end -->
+            <div class="col">
+              <div class="card h-90 shadow border-0">
+                <img style="height: 320px;width: 85%;position: relative;left: 5%;" src="images/PngItem_2597366 1.png" class="card-img-top mt-2 card-image" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Ladies Jacket</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+                </div>
+                <div class="card-last d-flex justify-content-between align-items-center m-2">
+                  <h5 class="number-234">$234</h5>
+              <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+              </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-70 shadow border-0">
+                <img style="height: 320px;width: 90%;position: relative;left: 5%;" src="images/image 15.png" class="card-img-top mt-2 card-image" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Woman Leather Jacket</h5>
+                  <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+                </div>
+                <div class="card-last d-flex justify-content-between align-items-center m-2">
+                  <h5 class="number-234">$234</h5>
+              <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+              </div>
+              </div>
+            </div>
+          </div>
+    </section>
+
     <!-- man jacket start -->
-    <section class="man-jacket">
-        <div class="container">
-            <div class="product-cat-title ">
-                <h3>MAN JACKET</h3>
+    <section style="margin-top: 10%;margin-bottom: 10%;" class="container">
+      <h1>MAN JACKET</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4 ">
+          <div class="col">
+            <div class="card h-70 shadow border-0">
+              <img style="height: 334px;width: 90%;position: relative;left: 5%;" src="images/image 11.png" class="card-img-top mt-2 card-image" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Snowboard Jacket Mens</h5>
+                <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              </div>
+              <div class="card-last d-flex justify-content-between align-items-center m-2">
+                <h5 class="number-234">$234</h5>
+            <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
             </div>
-            <!-- card start -->
-            <div class="jacket ">
-                <div class="card-deck d-flex ">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="images/image 11.png" class="card-img-top" alt="Snowboard Jacket Mens">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Snowboard Jacket Mens</h5>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                            <div class="card-last d-flex justify-content-between align-items-center">
-                                <h5>$234</h5>
-                            <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="images/vippng 1.png" class="card-img-top" alt="Man Leather Jackets">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Man Leather Jackets</h5>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                            <div class="card-last d-flex justify-content-between align-items-center">
-                                <h5>$234</h5>
-                            <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="images/toppng 1.png" class="card-img-top" alt="Man Casual Jackets">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Man Casual Jackets</h5>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-                            <div class="card-last d-flex justify-content-between align-items-center">
-                                <h5>$234</h5>
-                            <button class="button-style"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            <!-- card end -->
-       </section>
-       <!-- man jacket end -->
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-70 shadow border-0">
+              <img style="height: 327px;width: 327px;position: relative;left: 5%;" src="images/vippng 1.png" class="card-img-top mt-2 card-image" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Man Leather Jackets</h5>
+                <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              </div>
+              <div class="card-last d-flex justify-content-between align-items-center m-2">
+                <h5 class="number-234" >$234</h5>
+            <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+            </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-70 shadow border-0">
+              <img style="height: 327px;width: 334px;position: relative;left: 3%;"src="images/toppng 1.png" class="card-img-top mt-2 card-image" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Man Casual Jackets</h5>
+                <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              </div>
+              <div class="card-last d-flex justify-content-between align-items-center m-2">
+                <h5 class="number-234">$234</h5>
+            <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+            </div>
+            </div>
+          </div>
+        </div>
+  </section>
+   </header>
+
        <!-- 4th section start -->
        <section class="forth-section">
            <div class="container">
