--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </section>
     <!-- hero section end -->
     <!-- woman jacket section start -->
-    <section style="margin-top: 30%; margin-bottom: 10%;" class="container">
-        <h1>WOMAN JACKET</h1>
+    <section style="margin-top: 23%; margin-bottom: 10%;" class="container">
+        <h1 style="margin-bottom: 5%;">WOMAN JACKET</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col">
               <div class="card h-70 shadow border-0">
@@ -111,8 +111,8 @@
     </section>
 
     <!-- man jacket start -->
-    <section style="margin-top: 10%;margin-bottom: 10%;" class="container">
-      <h1>MAN JACKET</h1>
+    <section style="margin-bottom: 10%;" class="container">
+      <h1 style="margin-bottom: 5%;">MAN JACKET</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4 ">
           <div class="col">
             <div class="card h-70 shadow border-0">
@@ -162,7 +162,7 @@
            <div class="container">
              <div class="row ">
                <div class="col-md-5 ">
-                <div class="card mb-3" style="max-width: 540px;">
+                <div class="card mb-3 border-0" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="images/image 12.png" alt="...">
@@ -175,7 +175,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-3" style="max-width: 540px;">
+                  <div class="card mb-3 border-0 " style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="images/image 13.png" alt="...">
@@ -188,7 +188,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-3" style="max-width: 540px;">
+                  <div class="card mb-3 border-0" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img src="images/image 14.png" alt="...">
