--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
    </header>
 
        <!-- 4th section start -->
-       <section class="forth-section">
+  <section class="forth-section">
            <div class="container">
              <div class="row ">
-               <div class="col-md-5 ">
-                <div class="card mb-3 border-0" style="max-width: 540px;">
+               <div class="col-md-6">
+                <div class="card mb-3 border-0 shadow " style="max-width: 489px;height: 135px;border-radius: 9%;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="images/image 12.png" alt="...">
+                        <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 12.png" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -175,34 +175,34 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-3 border-0 " style="max-width: 540px;">
+                  <div class="card mb-3 border-0 shadow " style="max-width: 489px;height: 135px;border-radius: 9%;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="images/image 13.png" alt="...">
+                        <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 13.png" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
                           <h5 class="card-title">Free Exchanges</h5>
-                          <p class="card-text">One of the many reasons you can shop<br>with peace of mind</p>
+                          <p class="card-text">One of the many reasons you can shop with peace of mind.</p>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-3 border-0" style="max-width: 540px;">
+                  <div class="card mb-3 border-0 shadow " style="max-width: 489px;height: 135px;border-radius: 9%;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="images/image 14.png" alt="...">
+                        <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 14.png" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
                           <h5 class="card-title">Contact Our Seller</h5>
-                          <p class="card-text">They are here to help you. That's quite<br> literally what we pay them for</p>
+                          <p class="card-text">They are here to help you. That's quite literally what we pay them for.</p>
                         </div>
                       </div>
                     </div>
                   </div>
              </div>
-               <div class=" faria col-md-7  ">
+               <div class=" faria col-md-6  ">
                    <img class="img-fluid" src="images/XMLID 1.png" alt="">
                </div>
              </div>
