--- a/index.html
+++ b/index.html
@@ -202,15 +202,14 @@
                     </div>
                   </div>
              </div>
-               <div class=" faria col-md-6  ">
-                   <img class="img-fluid" src="images/XMLID 1.png" alt="">
+               <div class=" faria col-md-6 ">
+                   <img style="height: 40%;" class="img-fluid" src="images/XMLID 1.png" alt="">
                </div>
              </div>
            </div>
        </section>
        <!-- 4th section end -->
-
-       <!-- extra work start -->
+  <!-- extra work start -->
        <section class="newsletter ">
         <div class="container  shadow bg-success text-white  p-4 p-md-5 rounded ">
             <div class="row justify-content-between align-items-center">
