--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
      <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
      <link rel=”stylesheet” href=”css/bootstrap.css”>
      <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="stylesheet" href="css/bootstrap-responsive.css">
 </head>
 <body>
    <header class="header">
@@ -66,7 +69,7 @@
     <!-- hero section end -->
     <!-- woman jacket section start -->
     <section style="margin-top: 23%; margin-bottom: 10%;" class="container">
-        <h1 style="margin-bottom: 5%;">WOMAN JACKET</h1>
+        <h1 class="jacket-title" style="margin-bottom: 5%;">WOMAN JACKET</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col">
               <div class="card h-70 shadow border-0">
@@ -112,7 +115,7 @@
 
     <!-- man jacket start -->
     <section style="margin-bottom: 10%;" class="container">
-      <h1 style="margin-bottom: 5%;">MAN JACKET</h1>
+      <h1 class="jacket-title" style="margin-bottom: 5%;">MAN JACKET</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4 ">
           <div class="col">
             <div class="card h-70 shadow border-0">
@@ -169,7 +172,7 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title">Find the Perfect Fit</h5>
+                          <h5 class="card-title support">Find the Perfect Fit</h5>
                           <p class="card-text">Everybody is different, which is why we <br>offer styles for every body</p>
                         </div>
                       </div>
@@ -182,7 +185,7 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title">Free Exchanges</h5>
+                          <h5 class="card-title support">Free Exchanges</h5>
                           <p class="card-text">One of the many reasons you can shop with peace of mind.</p>
                         </div>
                       </div>
@@ -195,7 +198,7 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title">Contact Our Seller</h5>
+                          <h5 class="card-title support">Contact Our Seller</h5>
                           <p class="card-text">They are here to help you. That's quite literally what we pay them for.</p>
                         </div>
                       </div>
