--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
                 <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
             </div>
             <div class="hero-section-second-div" >
-                <img class="w-100" src="images/profile.png" alt="">
+                <img class="w-100 img-fluid" src="images/profile.png" alt="">
             </div>       
     </section>
+  </header>
     <!-- hero section end -->
     <!-- woman jacket section start -->
     <section style="margin-top: 23%; margin-bottom: 10%;" class="container">
@@ -73,7 +74,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col">
               <div class="card h-70 shadow border-0">
-                <img style="height: 30%;width: 90%;position: relative;left: 5%;" src="images/SeekPng 1.png" class="card-img-top mt-2 card-image" alt="...">
+                <img style="height: 30%;width: 90%;position: relative;left: 5%;" src="images/SeekPng 1.png" class="card-img-top mt-2 card-image img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Yellow Coat Jacket</h5>
                   <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
@@ -86,7 +87,7 @@
             </div>
             <div class="col">
               <div class="card h-90 shadow border-0">
-                <img style="height: 320px;width: 85%;position: relative;left: 5%;" src="images/PngItem_2597366 1.png" class="card-img-top mt-2 card-image" alt="...">
+                <img style="height: 320px;width: 85%;position: relative;left: 5%;" src="images/PngItem_2597366 1.png" class="card-img-top mt-2 card-image img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ladies Jacket</h5>
                   <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
@@ -99,7 +100,7 @@
             </div>
             <div class="col">
               <div class="card h-70 shadow border-0">
-                <img style="height: 320px;width: 90%;position: relative;left: 5%;" src="images/image 15.png" class="card-img-top mt-2 card-image" alt="...">
+                <img style="height: 320px;width: 90%;position: relative;left: 5%;" src="images/image 15.png" class="card-img-top mt-2 card-image img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Woman Leather Jacket</h5>
                   <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
@@ -158,14 +159,14 @@
           </div>
         </div>
   </section>
-   </header>
+   
 
        <!-- 4th section start -->
   <section class="forth-section">
            <div class="container">
              <div class="row ">
                <div class="col-md-6">
-                <div class="card mb-3 border-0 shadow " style="max-width: 489px;height: 135px;border-radius: 9%;">
+                <div class="card mb-3 border-0 shadow forth-card" style="max-width: 489px;height: 135px;border-radius: 9%;">
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 12.png" alt="...">
@@ -178,7 +179,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-3 border-0 shadow " style="max-width: 489px;height: 135px;border-radius: 9%;">
+                  <div class="card mb-3 border-0 shadow forth-card " style="max-width: 489px;height: 135px;border-radius: 9%;">
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 13.png" alt="...">
@@ -191,7 +192,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card mb-3 border-0 shadow " style="max-width: 489px;height: 135px;border-radius: 9%;">
+                  <div class="card mb-3 border-0 shadow forth-card" style="max-width: 489px;height: 135px;border-radius: 9%;">
                     <div class="row g-0">
                       <div class="col-md-4">
                         <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 14.png" alt="...">
