--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- navbar start-->
     <nav class="navbar navbar-expand-lg navbar-light  navbarheight" >
         <div class="d-flex ms-5">
-            <a class="navbar-brand" href="index.html"><img class="col col-md-8 ms-5"  src="logo.png" alt="Penguin Fashion Logo"></a>
+            <a class="navbar-brand" href="index.html"><img class="img-fluid"  src="logo.png" alt="Penguin Fashion Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -69,7 +69,7 @@
   </header>
     <!-- hero section end -->
     <!-- woman jacket section start -->
-    <section style="margin-top: 23%; margin-bottom: 10%;" class="container">
+    <section style="margin-top:50px; margin-bottom: 10%;" class="container">
         <h1 class="jacket-title" style="margin-bottom: 5%;">WOMAN JACKET</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col">
@@ -115,7 +115,7 @@
     </section>
 
     <!-- man jacket start -->
-    <section style="margin-bottom: 10%;" class="container">
+    <section style="margin-bottom: 10px;" class="container">
       <h1 class="jacket-title" style="margin-bottom: 5%;">MAN JACKET</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4 ">
           <div class="col">
@@ -159,9 +159,7 @@
           </div>
         </div>
   </section>
-   
-
-       <!-- 4th section start -->
+   <!-- 4th section start -->
   <section class="forth-section">
            <div class="container">
              <div class="row ">
