--- a/index.html
+++ b/index.html
@@ -175,68 +175,41 @@
   <!-- 4th section start -->
   <section class="forth-section">
     <div class="container">
-      <div class="row ">
-        <div class="col-md-6">
-              <div class="row">
-                <div class="col-md-6">
-                  <img  style="width: 100px;" src="images/image 12.png" alt="...">
-                </div>
-                <div class="col-md-6">
-                  <h5 class="card-title support">Find the Perfect Fit</h5>
-                  <p class="card-text">Everybody is different, which is why we <br>offer styles for every body</p>
-                </div>
+      <div class="row">
+          <div class="col-md-6 order-1 order-md-0">
+              <div class="row shadow mb-3 rounded">
+                  <div class="col-md-4">
+                      <img style="width: 100px;" class="img-fluid" src="images/image 12.png" alt="">
+                  </div>
+                  <div class="col-md-8 text-center">
+                      <h1>Find the Perfect Fit</h1>
+                      <p>Everybody is different, which is why we offer styles for every body.</p>
+                  </div>
               </div>
-        </div>
-        <div class="col-md-6">
-          <div class=" faria col-md-6 ">
-            <img class="img-fluid" src="images/XMLID 1.png" alt="">
+              <div class="row shadow mb-3 rounded">
+                  <div class="col-md-4">
+                      <img style="width: 100px;" class="img-fluid" src="images/image 13.png" alt="">
+                  </div>
+                  <div class="col-md-8 text-center">
+                      <h1>Free Exchanges</h1>
+                      <p>One of the many reasons you can shop with peace of mind.</p>
+                  </div>
+              </div>
+              <div class="row shadow mb-3 rounded">
+                  <div class="col-md-4">
+                      <img style="width: 100px;" class="img-fluid" src="images/image 14.png" alt="">
+                  </div>
+                  <div class="col-md-8 text text-center">
+                      <h1>Contact Our Seller</h1>
+                      <p>They are here to help you. That's quite literally what we pay them for.</p>
+                  </div>
+              </div>
           </div>
-        </div>
-        <!--  -->
-        <!-- <div class="col-md-6">
-                <div class="card mb-3 border-0 shadow forth-card" style="max-width: 489px;height: 135px;border-radius: 9%;">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card mb-3 border-0 shadow forth-card " style="max-width: 489px;height: 135px;border-radius: 9%;">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 13.png" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title support">Free Exchanges</h5>
-                          <p class="card-text">One of the many reasons you can shop with peace of mind.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="card mb-3 border-0 shadow forth-card" style="max-width: 489px;height: 135px;border-radius: 9%;">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <img  style="width: 100px;margin-left: 35px;margin-top: 10px;" src="images/image 14.png" alt="...">
-                      </div>
-                      <div class="col-md-8">
-                        <div class="card-body">
-                          <h5 class="card-title support">Contact Our Seller</h5>
-                          <p class="card-text">They are here to help you. That's quite literally what we pay them for.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-             </div> -->
-        <!--  -->
-        <!--  -->
+          <div class="col-md-6 order-0 order-md-1 w-20">
+              <img class="img-fluid" src="images/XMLID 1.png" alt="">
+          </div>
       </div>
-    </div>
+  </div>
   </section>
   <!-- 4th section end -->
   <!-- extra work start -->
