--- a/index.html
+++ b/index.html
@@ -236,52 +236,54 @@
 
 
   <footer class="bg-light mt-5">
-    <div class="container pt-5 pb-5">
-      <div class="row">
-        <div class="col-md-4 order-4 order-md-0">
-          <img style="width: 350px; height: 90px;" class="d-none d-md-block" src="logo.png" alt="">
-          <p class="mt-3 text-center text-md-left">Penguin Fashion © 2021 . All right Reserved</p>
-        </div>
-        <div class="col-6 col-md-2">
-          <ul class="list-unstyled">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Support</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md-3">
-          <ul class="list-unstyled">
-            <li><a href="#">Our Feed</a></li>
-            <li><a href="#">Term And Condition</a></li>
-            <li><a href="#">Our Policy</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 text-center text-md-left">
-          <h5>Stay Connected</h5>
-          <ul class="list-unstyled contact-info">
-            <li><img src="images/icons/email.png" alt=""><a href="mailto:info@hotgadget.com">
-                info@penguinfashion.com</a></li>
-            <li><img src="images/icons/call.png" alt=""><a href="tel:88017-XXX-XXX">+88012-XXX-XXX</a></li>
-          </ul>
-          <ul class="list-inline social-media">
-            <li class="list-inline-item">
-              <a target="_blank" href="https://facebook.com/dev.shadin"><img src="images/icons/facebook.png" alt=""></a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="https://twitter.com/hotgadget"><img src="images/icons/twitter.png" alt=""></a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="https://instagram.com/hotgadget"><img src="images/icons/instagram.png"
-                  alt=""></a>
-            </li>
-            <li class="list-inline-item">
-              <a target="_blank" href="https://pinterest.com/hotgadget"><img src="images/icons/pinterest.png"
-                  alt=""></a>
-            </li>
-          </ul>
-        </div>
+    <div class="row">
+      <div class="col-md-4">
+         <img class="img-fluid" src="logo.png" alt="">
+         <p class="mt-3 text-center text-md-left">Penguin Fashion © 2021 . All right Reserved</p> 
       </div>
-    </div>
+      <div class="col-md-4">
+          <div class="row text-center">
+              <div class="col-md-6">
+                 <ul class="list-unstyled">
+                     <li><a href="#">About</a></li>
+                     <li><a href="#">Contact</a></li>
+                     <li><a href="#">Support</a></li>
+                   </ul>
+              </div>
+              <div class="col-md-6">
+                 <ul class="list-unstyled">
+                     <li><a href="#">Our Feed</a></li>
+                     <li><a href="#">Term And Condition</a></li>
+                     <li><a href="#">Our Policy</a></li>
+                   </ul>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4 text-center">
+         <h5>Stay Connected</h5>
+         <ul class="list-unstyled contact-info">
+           <li><img src="images/icons/email.png" alt=""><a href="mailto:info@hotgadget.com">
+               info@penguinfashion.com</a></li>
+           <li><img src="images/icons/call.png" alt=""><a href="tel:88017-XXX-XXX">+88012-XXX-XXX</a></li>
+         </ul>
+         <ul class="list-inline social-media">
+           <li class="list-inline-item">
+             <a target="_blank" href="https://facebook.com/dev.shadin"><img src="images/icons/facebook.png" alt=""></a>
+           </li>
+           <li class="list-inline-item">
+             <a target="_blank" href="https://twitter.com/hotgadget"><img src="images/icons/twitter.png" alt=""></a>
+           </li>
+           <li class="list-inline-item">
+             <a target="_blank" href="https://instagram.com/hotgadget"><img src="images/icons/instagram.png"
+                 alt=""></a>
+           </li>
+           <li class="list-inline-item">
+             <a target="_blank" href="https://pinterest.com/hotgadget"><img src="images/icons/pinterest.png"
+                 alt=""></a>
+           </li>
+         </ul>
+      </div>
+  </div>
 
   </footer> 
   
