--- a/index.html
+++ b/index.html
@@ -173,39 +173,39 @@
     </div>
   </section>
   <!-- 4th section start -->
-  <section class="forth-section">
+  <section class="forth-section ">
     <div class="container">
       <div class="row">
           <div class="col-md-6 order-1 order-md-0">
-              <div class="row shadow mb-3 rounded">
-                  <div class="col-md-4">
+              <div class="row shadow mb-3 rounded  text-center mt-5">
+                  <div class="col-md-4 ">
                       <img style="width: 100px;" class="img-fluid" src="images/image 12.png" alt="">
                   </div>
                   <div class="col-md-8 text-center">
-                      <h1>Find the Perfect Fit</h1>
+                      <h4>Find the Perfect Fit</h4>
                       <p>Everybody is different, which is why we offer styles for every body.</p>
                   </div>
               </div>
-              <div class="row shadow mb-3 rounded">
+              <div class="row shadow mb-3 rounded text-center mt-5">
                   <div class="col-md-4">
                       <img style="width: 100px;" class="img-fluid" src="images/image 13.png" alt="">
                   </div>
                   <div class="col-md-8 text-center">
-                      <h1>Free Exchanges</h1>
+                      <h4>Free Exchanges</h4>
                       <p>One of the many reasons you can shop with peace of mind.</p>
                   </div>
               </div>
-              <div class="row shadow mb-3 rounded">
+              <div class="row shadow mb-3 rounded text-center mt-5">
                   <div class="col-md-4">
                       <img style="width: 100px;" class="img-fluid" src="images/image 14.png" alt="">
                   </div>
                   <div class="col-md-8 text text-center">
-                      <h1>Contact Our Seller</h1>
+                      <h4>Contact Our Seller</h4>
                       <p>They are here to help you. That's quite literally what we pay them for.</p>
                   </div>
               </div>
           </div>
-          <div class="col-md-6 order-0 order-md-1 w-20">
+          <div class="col-md-6 order-0 order-md-1 mt-5 mb-5 text-center">
               <img class="img-fluid" src="images/XMLID 1.png" alt="">
           </div>
       </div>
@@ -213,6 +213,7 @@
   </section>
   <!-- 4th section end -->
   <!-- extra work start -->
+  <!-- newsletter start -->
   <section class="container ">
     <div class=" newsletter  bg-success text-white  p-4 p-md-5 rounded ">
       <div class="row justify-content-between align-items-center">
@@ -233,15 +234,15 @@
       </div>
     </div>
   </section>
-
-
-  <footer class="bg-light mt-5">
+  <!-- news letter end -->
+  <!-- footer start -->
+ <footer class="bg-light mt-5">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 order-3 order-md-1">
          <img class="img-fluid" src="logo.png" alt="">
          <p class="mt-3 text-center text-md-left">Penguin Fashion © 2021 . All right Reserved</p> 
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 order-1 order-md-2">
           <div class="row text-center">
               <div class="col-md-6">
                  <ul class="list-unstyled">
@@ -259,7 +260,7 @@
               </div>
           </div>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-md-4 text-center order-2 order-md-3">
          <h5>Stay Connected</h5>
          <ul class="list-unstyled contact-info">
            <li><img src="images/icons/email.png" alt=""><a href="mailto:info@hotgadget.com">
@@ -284,9 +285,9 @@
          </ul>
       </div>
   </div>
-
-  </footer> 
-  
+</footer> 
+  <!--footer end  -->
+  <!-- extra work end -->
 
 </body>
 
