--- a/practice.html
+++ b/practice.html
@@ -55,7 +55,7 @@
                     <div class="col-md-4">
                         <img style="width: 100px;" class="img-fluid" src="images/image 14.png" alt="">
                     </div>
-                    <div class="col-md-8 text text-center">
+                    <div class="col-md-8 text-center">
                         <h1>Contact Our Seller</h1>
                         <p>They are here to help you. That's quite literally what we pay them for.</p>
                     </div>
