hero section resolved

--- a/practice.html
+++ b/practice.html
@@ -77,14 +77,14 @@
     <!-- hero section -->
 
     <div >
-        <div class="row bg-primary">
-            <div class="col-md-6">
-                <h1>hdvhsdvhs</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, velit.</p>
-                <button>faria</button>
+        <div class="row d-flex align-items-center" style="background-color: #fff1cb;">
+            <div class="col-md-6 ">
+                <h1><span id="yellow-color">BE THE PENGUINS</span> <br> OF WINTER</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
             </div>
             <div class="col-md-6">
-                <img class="img-fluid" src="images/profile.png" alt="">
+                <img class="img-fluid mt-5 mb-5" src="images/profile.png" alt="">
             </div>
         </div>
     </div>
