--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
     </nav>
     <!-- navbar end -->
     <!-- hero section start -->
-    <section class="d-flex hero-section">
-      <div class=" hero-section-first-div">
-        <h1 id="yellow-color">Be the Penguins</h1>
-        <h1>of Winter</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing <br>elit. Odit numquam similique, dolore voluptas
-          veritatis nulla?</p>
-        <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
-      </div>
-      <div class="hero-section-second-div">
-        <img class="logo-image w-100 img-fluid" src="images/profile.png" alt="">
+    <section class="container" >
+      <div class="row d-flex align-items-center">
+          <div class="col-md-6 ">
+              <h1><span id="yellow-color">BE THE PENGUINS</span> <br> OF WINTER</h1>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+              <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
+          </div>
+          <div class="col-md-6">
+              <img class="img-fluid mt-5 mb-5" src="images/profile.png" alt="">
+          </div>
       </div>
     </section>
   </header>
