--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
     crossorigin="anonymous"></script>
   <!-- link bootstrap end -->
 
-  <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
-  <link rel=”stylesheet” href=”css/bootstrap.css”>
-  <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/bootstrap-responsive.css">
+ 
+ 
 </head>
 
 <body>
@@ -43,16 +39,16 @@
         </button>
         <div class="collapse navbar-collapse ps-5 navbar-link" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active me-5">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="me-5">
+              <a class="nav-link" href="#">Home</a>
             </li>
-            <li class="nav-item me-5">
+            <li class="me-5">
               <a class="nav-link" href="#">Product</a>
             </li>
-            <li class="nav-item me-5">
+            <li class="me-5">
               <a class="nav-link" href="#">About Us</a>
             </li>
-            <li class="nav-item me-5">
+            <li class="me-5">
               <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
@@ -64,7 +60,7 @@
     <section class="container" >
       <div class="row d-flex align-items-center">
           <div class="col-md-6 ">
-              <h1><span id="yellow-color">BE THE PENGUINS</span> <br> OF WINTER</h1>
+              <h1 id="hero-section-h1"><span id="yellow-color">BE THE PENGUINS</span> <br> OF WINTER</h1>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
               <button class="button-style border-0"><i class="fas fa-shopping-cart pe-3"></i>BUY NOW</button>
           </div>
@@ -77,7 +73,7 @@
   <!-- hero section end -->
   <!-- woman jacket section start -->
   <section style="margin-top:50px; margin-bottom: 10%;" class="container">
-    <h1 class="jacket-title" style="margin-bottom: 5%;">WOMAN JACKET</h1>
+    <h1 class="dress-title" style="margin-bottom: 5%;">WOMAN JACKET</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4 ">
       <div class="col">
         <div class="card h-70 shadow border-0">
@@ -126,7 +122,7 @@
 
   <!-- man jacket start -->
   <section style="margin-bottom: 10px;" class="container">
-    <h1 class="jacket-title" style="margin-bottom: 5%;">MAN JACKET</h1>
+    <h1 class="dress-title" style="margin-bottom: 5%;">MAN JACKET</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4 ">
       <div class="col">
         <div class="card h-70 shadow border-0">
@@ -177,31 +173,31 @@
     <div class="container">
       <div class="row">
           <div class="col-md-6 order-1 order-md-0">
-              <div class="row shadow mb-3 rounded  text-center mt-5">
+              <div class="row shadow mb-3 rounded mt-5">
                   <div class="col-md-4 ">
                       <img style="width: 100px;" class="img-fluid" src="images/image 12.png" alt="">
                   </div>
-                  <div class="col-md-8 text-center">
-                      <h4>Find the Perfect Fit</h4>
-                      <p>Everybody is different, which is why we offer styles for every body.</p>
+                  <div class="col-md-8">
+                      <h4 class="third-section ">Find the Perfect Fit</h4>
+                      <p >Everybody is different, which is why we<br> offer styles for every body.</p>
                   </div>
               </div>
-              <div class="row shadow mb-3 rounded text-center mt-5">
+              <div class="row shadow mb-3 rounded mt-5">
                   <div class="col-md-4">
                       <img style="width: 100px;" class="img-fluid" src="images/image 13.png" alt="">
                   </div>
-                  <div class="col-md-8 text-center">
-                      <h4>Free Exchanges</h4>
-                      <p>One of the many reasons you can shop with peace of mind.</p>
+                  <div class="col-md-8">
+                      <h4 class="third-section text-left">Free Exchanges</h4>
+                      <p class="text-left">One of the many reasons you can shop<br> with peace of mind.</p>
                   </div>
               </div>
-              <div class="row shadow mb-3 rounded text-center mt-5">
+              <div class="row shadow mb-3 rounded mt-5">
                   <div class="col-md-4">
                       <img style="width: 100px;" class="img-fluid" src="images/image 14.png" alt="">
                   </div>
-                  <div class="col-md-8 text text-center">
-                      <h4>Contact Our Seller</h4>
-                      <p>They are here to help you. That's quite literally what we pay them for.</p>
+                  <div class="col-md-8">
+                      <h4 class="third-section text-left">Contact Our Seller</h4>
+                      <p class="text-left">They are here to help you. That's quite<br> literally what we pay them for.</p>
                   </div>
               </div>
           </div>
@@ -215,74 +211,36 @@
   <!-- extra work start -->
   <!-- newsletter start -->
   <section class="container ">
-    <div class=" newsletter  bg-success text-white  p-4 p-md-5 rounded ">
-      <div class="row justify-content-between align-items-center">
-        <div class="col-md-6">
-          <h2>GRAB YOUR COUPON</h2>
-          <p>Join us now to get all news and special coupons</p>
-        </div>
-        <div class="col-md-6">
-          <form class="form" action="">
-            <div class="input-group">
-              <input class="form-control" placeholder="Enter Your Email Here" type="text">
-              <div class="input-group-append">
-                <button class="btn btn-danger">Join Us</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
+       <div class="row bg-success justify-content-between align-items-center text-white  p-4 p-md-5">
+         <div class="col-md-6">
+          <h1>GRAB YOUR COUPON NOW</h1>
+          <p>Join today and get all news and special coupons</p>
+         </div>
+         <div class="col-md-6 text-center ps-5">
+           <input type="tel" placeholder="Your Mobile Number" name="" id="">
+           <button class="btn btn-info">I'm excited</button>
+         </div>
+       </div>
   </section>
   <!-- news letter end -->
   <!-- footer start -->
- <footer class="bg-light mt-5">
+ <footer class="bg-light mt-5 footer-height ">
     <div class="row">
       <div class="col-md-4 order-3 order-md-1">
-         <img class="img-fluid" src="logo.png" alt="">
-         <p class="mt-3 text-center text-md-left">Penguin Fashion © 2021 . All right Reserved</p> 
+         <img class="img-fluid " src="logo.png" alt="">
       </div>
       <div class="col-md-4 order-1 order-md-2">
           <div class="row text-center">
-              <div class="col-md-6">
-                 <ul class="list-unstyled">
-                     <li><a href="#">About</a></li>
-                     <li><a href="#">Contact</a></li>
-                     <li><a href="#">Support</a></li>
-                   </ul>
+              <div class="col-md-12 mt-4">
+                <a href="#">Return-policy</a>
+                <a href="#">Refund-policy</a>
+                <a href="#">Support</a>
               </div>
-              <div class="col-md-6">
-                 <ul class="list-unstyled">
-                     <li><a href="#">Our Feed</a></li>
-                     <li><a href="#">Term And Condition</a></li>
-                     <li><a href="#">Our Policy</a></li>
-                   </ul>
-              </div>
-          </div>
+            </div>
       </div>
       <div class="col-md-4 text-center order-2 order-md-3">
-         <h5>Stay Connected</h5>
-         <ul class="list-unstyled contact-info">
-           <li><img src="images/icons/email.png" alt=""><a href="mailto:info@hotgadget.com">
-               info@penguinfashion.com</a></li>
-           <li><img src="images/icons/call.png" alt=""><a href="tel:88017-XXX-XXX">+88012-XXX-XXX</a></li>
-         </ul>
-         <ul class="list-inline social-media">
-           <li class="list-inline-item">
-             <a target="_blank" href="https://facebook.com/dev.shadin"><img src="images/icons/facebook.png" alt=""></a>
-           </li>
-           <li class="list-inline-item">
-             <a target="_blank" href="https://twitter.com/hotgadget"><img src="images/icons/twitter.png" alt=""></a>
-           </li>
-           <li class="list-inline-item">
-             <a target="_blank" href="https://instagram.com/hotgadget"><img src="images/icons/instagram.png"
-                 alt=""></a>
-           </li>
-           <li class="list-inline-item">
-             <a target="_blank" href="https://pinterest.com/hotgadget"><img src="images/icons/pinterest.png"
-                 alt=""></a>
-           </li>
-         </ul>
+         <h5>Stay Connected With Facebook</h5>
+         <h5><a href="#">www.facebook.com/Penguin Fashion</a></h5>
       </div>
   </div>
 </footer> 
