--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
   <!-- link bootstrap end -->
-
- 
- 
 </head>
-
 <body>
   <header class="header">
     <!-- navbar start-->
     <nav class="navbar navbar-expand-lg navbar-light  navbarheight">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png" alt="Penguin Fashion Logo"></a>
+        <a class="navbar-brand" href="index.html"><img class="img-fluid navbar-image" src="logo.png" alt="Penguin Fashion Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -111,7 +107,7 @@
       </div>
     </div>
   </section>
-
+  <!-- woman jacket section end -->
   <!-- man jacket start -->
   <section style="margin-bottom: 10px;" class="container">
     <h1 class="dress-title" style="margin-bottom: 5%;">MAN JACKET</h1>
@@ -133,9 +129,9 @@
       <div class="col">
         <div class="card h-70 shadow border-0">
           <img style="height: 327px;width: 327px;position: relative;left: 5%;" src="images/vippng 1.png"
-            class="card-img-top mt-2 card-image" alt="...">
+            class="card-img-top mt-2 card-image jacket-position" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Man Leather Jackets</h5>
+            <h5 class="card-title ">Man Leather Jackets</h5>
             <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
           </div>
           <div class="card-last d-flex justify-content-between align-items-center m-2">
@@ -147,7 +143,7 @@
       <div class="col">
         <div class="card h-70 shadow border-0">
           <img style="height: 327px;width: 334px;position: relative;left: 3%;" src="images/toppng 1.png"
-            class="card-img-top mt-2 card-image" alt="...">
+            class="card-img-top mt-2 card-image jacket-position" alt="...">
           <div class="card-body">
             <h5 class="card-title">Man Casual Jackets</h5>
             <p class="card-text">Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
@@ -160,6 +156,7 @@
       </div>
     </div>
   </section>
+  <!-- man jacket end -->
   <!-- 4th section start -->
   <section class="forth-section ">
     <div class="container">
@@ -169,7 +166,7 @@
                   <div class="col-md-4 text-center">
                       <img style="width: 100px;" class="img-fluid" src="images/image 12.png" alt="">
                   </div>
-                  <div class="col-md-8 ">
+                  <div class="col-md-8 forth-section-text">
                       <h4 class="third-section ">Find the Perfect Fit</h4>
                       <p >Everybody is different, which is why we<br> offer styles for every body.</p>
                   </div>
@@ -178,7 +175,7 @@
                   <div class="col-md-4 text-center">
                       <img style="width: 100px;" class="img-fluid" src="images/image 13.png" alt="">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-8 forth-section-text">
                       <h4 class="third-section text-left">Free Exchanges</h4>
                       <p class="text-left">One of the many reasons you can shop<br> with peace of mind.</p>
                   </div>
@@ -187,7 +184,7 @@
                   <div class="col-md-4 text-center">
                       <img style="width: 100px;" class="img-fluid" src="images/image 14.png" alt="">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-8 forth-section-text">
                       <h4 class="third-section text-left">Contact Our Seller</h4>
                       <p class="text-left">They are here to help you. That's quite<br> literally what we pay them for.</p>
                   </div>
@@ -221,7 +218,6 @@
       <div class="col-md-6 order-3 order-md-1">
          <img class="img-fluid " src="logo.png" alt="">
       </div>
-     
       <div class="col-md-6 text-center order-2 order-md-3">
          <h5>Stay Connected Through Facebook</h5>
          <h5><a href="#">www.facebook.com/Penguin Fashion</a></h5>
